--- a/resources/buildPlatformMap.properties
+++ b/resources/buildPlatformMap.properties
@@ -49,6 +49,7 @@ sunos_sparcv9-64=sparcv9_solaris
 sunos_x86-64=x86-64_solaris
 windows_aarch64_nocmprssptrs=aarch64_windows_xl
 windows_aarch64_cmprssptrs=aarch64_windows_cmprssptrs
+windows_aarch64=aarch64_windows
 win_x86-64_nocmprssptrs=x86-64_windows_xl
 win_x86-64_cmprssptrs=x86-64_windows_cmprssptrs
 win_x86-64=x86-64_windows
